[build-sytstem]
requires = ["setuptools"]
build-backend = "setuptools.build-meta"

[project]
name = "auxtools"
version = "1.0.0"
description = "auxiliary tools package"
readme = "README.md"
authors = [
	{name = "Joris Kampman", email="joriskampman@proton.me"}
]
license = "MIT"

[project.urls]
repository = "https://github.com/joriskampman/auxtools"

# explicitly list the python modules in the root
[tool.setuptools]
py-modules = ["coordinate_transforms", "cmaps"]

