# [build-sytstem]
# requires = ["setuptools"]
# build-backend = "setuptools.build-meta"

[project]
name = "auxtools"
version = "1.0.1"
description = "auxiliary tools package"
readme = "README.md"
authors = [
	{name = "Joris Kampman", email="joriskampman@proton.me"}
]
license = "MIT"
dependencies = [
	"numpy",
	"matplotlib",
	"pandas",
	"numexpr",
	"scipy",
	"scikit-image",
]

[project.urls]
repository = "https://github.com/joriskampman/auxtools"

# explicitly list the python modules in the root
[tool.setuptools.packages.find]
where = ["."]
include = ["auxtools*"]
